Use exports instead of opens